@@ -27,8 +27,8 @@ class WCS_Email_Customer_Notification_Manual_Trial_Expiration extends WCS_Email_
 		$this->description = __( 'Free trial expiry notification emails are sent when customer\'s free trial for a manually renewed subscription is about to expire.', 'woocommerce-subscriptions' );
 
 		$this->heading = __( 'Free trial expiration: manual payment required', 'woocommerce-subscriptions' );
-		// translators: placeholder is {customers_first_name}, a variable that will be substituted when email is sent out
-		$this->subject = sprintf( _x( 'Your free trial is almost up, %s ⏳', 'default email subject for an email notification for a manually renewed subscription with free trial expiry emails sent to the customer', 'woocommerce-subscriptions' ), '{customers_first_name}' );
+		// translators: $1: {site_title}, $2: {customers_first_name}, variables that will be substituted when email is sent out.
+		$this->subject = sprintf( _x( '[%1$s] %2$s, your free trial is almost up!', 'default email subject for an email notification for a manually renewed subscription with free trial expiry emails sent to the customer', 'woocommerce-subscriptions' ), '{site_title}', '{customers_first_name}' );
 
 		$this->template_html  = 'emails/customer-notification-manual-trial-ending.php';
 		$this->template_plain = 'emails/plain/customer-notification-manual-trial-ending.php';
